--- a/#source/scss/blocks/_header.scss
+++ b/#source/scss/blocks/_header.scss
@@ -50,6 +50,15 @@
 }
 
 /*   ****************      user-Bar   ****************       */
+.user__block {
+   display: flex;
+   align-items: center;
+
+   @media (max-width:$md3+px) {
+      flex-direction: column;
+   }
+}
+
 .user {
    display: flex;
    align-items: center;
@@ -60,7 +69,7 @@
    }
 
    @media (max-width:$md3+px) {
-      flex-direction: column;
+      flex-direction: row-reverse;
       margin-right: 28px;
    }
 
@@ -68,9 +77,8 @@
       font-weight: 600;
 
       @media (max-width:$md3+px) {
-         order: 1;
-         margin-bottom: 8px;
          font-size: 12px;
+         order: 1;
       }
 
       @media (min-width:$md3+px) {
@@ -87,7 +95,6 @@
 
       @media (max-width:$md3+px) {
          margin-bottom: 8px;
-         order: 0;
          width: 48px;
          height: 48px;
       }
@@ -109,7 +116,7 @@
          font-size: 8px;
          line-height: 12px;
          text-align: center;
-         order: 1;
+         margin-right: 12px;
       }
    }
 
