--- a/#source/scss/blocks/_form.scss
+++ b/#source/scss/blocks/_form.scss
@@ -1,6 +1,66 @@
-.profile {
+.form {
+   max-width: 1472px;
+   width: 100%;
 
-   &__form {}
+   &__btn {
+      position: relative;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 26px 0;
+      background-color: $colorFormBtn;
+      color: #fff;
+      font-size: 18px;
+      line-height: 22px;
+      z-index: 1;
+      @include anim(0.3s, 0s);
+
+      @media (max-width:$md3+px) {
+         width: 100%;
+         padding: 20px 0;
+      }
+
+      @media (min-width:$md3+px) {
+         flex: 0 1 46%;
+         width: 46%;
+         min-width: 300px;
+      }
+
+      &:before {
+         @media (max-width:1600px) {
+            margin-right: 20px;
+         }
+
+         @media (min-width:1600px) {
+            margin-right: 54px;
+
+         }
+      }
+
+      &:after {
+         content: '';
+         position: absolute;
+         top: 10px;
+         left: 10px;
+         width: 100%;
+         height: 100%;
+         border: 1px solid $acentColor;
+         @include anim(0.3s, 0s);
+         opacity: 0;
+         z-index: -1;
+      }
+
+      &:hover {
+         &:after {
+            opacity: 1;
+         }
+
+      }
+
+      &:active {
+         transform: scale(0.9);
+      }
+   }
 }
 
 .form-row {
@@ -111,6 +171,11 @@
       font-size: 16px;
    }
 
+   @media (max-width:$md4+px) {
+      font-size: 14px;
+      line-height: 18px;
+   }
+
    @media (min-width:$md2+px) {
       padding-left: 77px;
       max-width: 819px;
@@ -165,71 +230,6 @@
    }
 }
 
-.form {
-   max-width: 1472px;
-   width: 100%;
-
-   &__btn {
-      position: relative;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 31px 0;
-      background-color: $colorFormBtn;
-      color: #fff;
-      font-size: 18px;
-      line-height: 22px;
-      z-index: 1;
-
-      @media (max-width:$md3+px) {
-         width: 100%;
-      }
-
-      @media (min-width:$md3+px) {
-         flex: 0 1 46%;
-         width: 46%;
-         min-width: 300px;
-      }
-
-      &:before {
-         @media (max-width:1600px) {
-            margin-right: 20px;
-         }
-
-         @media (min-width:1600px) {
-            margin-right: 54px;
-
-         }
-      }
-
-      &:after {
-         content: '';
-         position: absolute;
-         top: 10px;
-         left: 10px;
-         width: 100%;
-         height: 100%;
-         border: 1px solid $acentColor;
-         z-index: -1;
-      }
-
-      &:hover {
-         @include anim(0.3s, 0s);
-         background-color: #065a6d;
-
-         &:after {
-            @include anim(0.3s, 0s);
-            border: 1px solid #065a6d;
-            top: 0;
-            left: 0;
-         }
-      }
-
-      &:active {
-         transform: scale(0.9);
-      }
-   }
-}
 
 .form-group {
    margin-bottom: 37px;
