--- a/#source/scss/blocks/_header.scss
+++ b/#source/scss/blocks/_header.scss
@@ -2,29 +2,32 @@
 .header {
    position: relative;
    background-color: $acentColor;
-   padding: 33px 50px 33px 195px;
+   padding: 33px 50px 33px 276px;
    color: #fff;
 
-   @media (min-width:1700px) {
-      padding: 33px 100px 33px 276px;
-   }
+   padding: 33px 100px 33px 276px;
 
-   @media (max-width:$md3+px) {
-      padding: 18px 20px 18px 100px;
+   @media (max-width:$md2+px) {
+      padding: 12px 20px 12px 0;
    }
 
    &__inner {
       display: flex;
-      align-items: center;
 
-      @media (min-width:1500px) {
+
+      @media (min-width:$md3+px) {
+         align-items: center;
+      }
+
+      @media (min-width:1540px) {
          justify-content: space-between;
       }
 
-      @media (max-width:1500px) {
+      @media (max-width:1540px) {
          flex-direction: row-reverse;
          justify-content: flex-start;
       }
+
    }
 }
 
@@ -39,10 +42,19 @@
    justify-content: center;
    background-color: $logoColar;
 
+   @media (max-width:1500px) {
+      left: 30px;
+   }
+
    @media (max-width:$md4+px) {
-      left: 17px;
-      height: 140px;
+      left: 0;
+      height: 103px;
       width: 70px;
+
+      a,
+      img {
+         height: 95%;
+      }
    }
 
    @media (min-width:1700px) {
@@ -64,7 +76,6 @@
    display: flex;
    align-items: center;
 
-
    @media (max-width:1500px) {
       margin-right: 42px;
    }
@@ -72,6 +83,7 @@
    @media (max-width:$md3+px) {
       flex-direction: row-reverse;
       margin-right: 28px;
+      align-items: flex-start;
    }
 
    &__wallet {
@@ -118,6 +130,7 @@
          line-height: 12px;
          text-align: center;
          margin-right: 12px;
+         padding-top: 10px;
       }
    }
 
@@ -162,7 +175,6 @@
 /*  ****************      Menu   ****************      */
 .header-menu {
    flex: 1;
-   justify-content: flex-start;
 
    &__list {
       display: flex;
@@ -186,7 +198,7 @@
 
 
 //*  HEADER MENU   *//
-@media (max-width:1500px) {
+@media (max-width:1540px) {
    .header-menu {
       position: fixed;
       top: 0;
@@ -237,15 +249,22 @@
 
 .header-menu__icon {
    display: block;
-   right: 39px;
+   position: relative;
    width: 34px;
    height: 20px;
-   transform: translateY(-50%);
    z-index: 105;
    cursor: pointer;
 
-   @media (min-width:1500px) {
+   @media (max-width:$md3+px) {
+      top: 14px;
+   }
+
+   @media (min-width:1540px) {
       display: none;
+   }
+
+   @media (min-width:$md3+px) {
+      transform: translateY(-50%);
    }
 
    &:before,
