--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -219,6 +219,7 @@ body {
     }
 
     p {
+      font-size: 16px;
       color: #838383;
       margin-bottom: 16px;
     }
@@ -246,10 +247,18 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
+  @media (max-width:$md3+px) {
+    padding-top: 27px;
+  }
 }
 
 .item-profile {
   background-image: url(../img/cabinet-bg/bg-1.png);
+
+  .cabinet__title {
+    margin-bottom: 28px;
+  }
 
   .form {
     &__inner {
@@ -264,21 +273,19 @@ body {
 
 .item-verification {
   background-image: url(../img/cabinet-bg/bg-2.png);
-  padding: 87px 0;
+
+
+  @media (min-width:$md3+px) {
+    padding: 87px 0;
+  }
 
   .cabinet__title {
     padding-left: 0;
   }
 
   .form__btn {
-    margin: 70px auto 0 auto;
-
-    &:after {
-      display: none;
-    }
+    margin: 0 auto;
   }
-
-
 }
 
 
