--- a/#source/scss/blocks/_header.scss
+++ b/#source/scss/blocks/_header.scss
@@ -242,6 +242,7 @@
 
          @media (max-width:$md2+px) {
             font-size: 26px;
+            line-height: 36px;
          }
 
          @media (min-width:$md2+px) {
