--- a/#source/scss/blocks/_form.scss
+++ b/#source/scss/blocks/_form.scss
@@ -2,65 +2,7 @@
    max-width: 1472px;
    width: 100%;
 
-   &__btn {
-      position: relative;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 26px 0;
-      background-color: $colorFormBtn;
-      color: #fff;
-      font-size: 18px;
-      line-height: 22px;
-      z-index: 1;
-      @include anim(0.3s, 0s);
-
-      @media (max-width:$md3+px) {
-         width: 100%;
-         padding: 20px 0;
-      }
-
-      @media (min-width:$md3+px) {
-         flex: 0 1 46%;
-         width: 46%;
-         min-width: 300px;
-      }
-
-      &:before {
-         @media (max-width:1600px) {
-            margin-right: 20px;
-         }
-
-         @media (min-width:1600px) {
-            margin-right: 54px;
-
-         }
-      }
-
-      &:after {
-         content: '';
-         position: absolute;
-         top: 10px;
-         left: 10px;
-         width: 100%;
-         height: 100%;
-         border: 1px solid $acentColor;
-         @include anim(0.3s, 0s);
-         opacity: 0;
-         z-index: -1;
-      }
-
-      &:hover {
-         &:after {
-            opacity: 1;
-         }
-
-      }
-
-      &:active {
-         transform: scale(0.9);
-      }
-   }
+   &__btn {}
 }
 
 .form-row {
