--- a/#source/scss/ui/_btn.scss
+++ b/#source/scss/ui/_btn.scss
@@ -1,8 +1,60 @@
-//<BUTTONS>====================================================================================================
 .btn {
-	display: inline-flex;
-	padding: 0px 0px;
-	&:hover{}
-	&.fw{width: 100%;}
+   position: relative;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   padding: 32px 0;
+   background-color: $colorFormBtn;
+   color: #fff;
+   font-size: 18px;
+   line-height: 22px;
+   z-index: 1;
+   @include anim(0.3s, 0s);
+
+   @media (max-width:$md3+px) {
+      width: 100%;
+      padding: 20px 0;
+      font-size: 16px;
+      line-height: 20px;
+   }
+
+   @media (min-width:$md3+px) {
+      width: 445px;
+   }
+
+   &:before {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      left: 55px;
+      font-size: 12px;
+
+      @media (max-width:$md3+px) {
+         left: 20px;
+      }
+   }
+
+   &:after {
+      content: '';
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      width: 100%;
+      height: 100%;
+      border: 1px solid $acentColor;
+      @include anim(0.3s, 0s);
+      opacity: 0;
+      z-index: -1;
+   }
+
+   &:hover {
+      &:after {
+         opacity: 1;
+      }
+
+   }
+
+   &:active {
+      transform: scale(0.9);
+   }
 }
-//</BUTTONS>====================================================================================================
