--- a/#source/scss/blocks/_header.scss
+++ b/#source/scss/blocks/_header.scss
@@ -212,6 +212,7 @@
       background: $acentColor;
       padding: 80px 15px;
       z-index: 100;
+      text-align: center;
 
       @media (max-width:$md3+px) {
          width: 100%;
